--- a/src/style/element/base.less
+++ b/src/style/element/base.less
@@ -1,4 +1,4 @@
 .myCard {
-  background-color: var(--color-card-bg) !important;
+  background-color: var(--card-bg) !important;
   color: var(--color-text) !important;
 }
