--- a/src/style/element/el-dropdown.less
+++ b/src/style/element/el-dropdown.less
@@ -1,21 +1,4 @@
 .el-dropdown-menu {
-  .myCard();
-  .el-dropdown-menu__item {
-    .myCard();
-    &:hover {
-      background-color: color-mix(in srgb, var(--color-primary) 10%, transparent) !important;
-    }
-    &.is-active {
-      background-color: red !important;
-    }
-  }
-}
-.el-popper {
-  .myCard();
-  .el-menu--popup {
-    .myCard();
-    &:hover {
-      background-color: color-mix(in srgb, var(--color-primary) 10%, transparent) !important;
-    }
-  }
+  --el-bg-color-overlay: var(--color-bg);
+  --el-dropdown-menuItem-hover-fill: color-mix(in srgb, var(--color-primary) 10%, transparent);
 }
