--- a/src/style/element/el-menu.less
+++ b/src/style/element/el-menu.less
@@ -1,21 +1,6 @@
 .el-menu {
-  .myCard();
-  .el-menu-item {
-    .myCard();
-    &:hover {
-      background-color: color-mix(in srgb, var(--color-primary) 20%, transparent) !important;
-    }
-    &.is-active {
-      color: var(--color-primary) !important;
-    }
-  }
-}
-.el-sub-menu {
-  .myCard();
-  .el-sub-menu__title {
-    color: var(--color-text) !important;
-    &:hover {
-      background-color: color-mix(in srgb, var(--color-primary) 20%, transparent) !important;
-    }
-  }
+  --el-menu-bg-color: var(--color-bg);
+  --el-menu-text-color: var(--color-text);
+  --el-menu-hover-bg-color: color-mix(in srgb, var(--btn-hover) 15%, transparent 90%);
+  --el-menu-active-color: var(--color-primary);
 }
